--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,29 @@
-barcode_generator==0.1rc15
-brother_ql==0.9.4
+appdirs==1.4.4
+argcomplete==3.6.3
+attrs==25.4.0
+brother-ql==0.9.4
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.0
+docutils==0.22.3
 escpos==2.0.0
-kivy==2.3.1
+filetype==1.2.0
+future==1.0.0
+idna==3.11
+Kivy==2.3.1
+Kivy-Garden==0.1.5
 kivymd==1.2.0
-Pillow==11.3.0
+packbits==0.6
+pillow==12.0.0
+Pygments==2.19.2
 pyserial==3.5
+python-barcode==0.16.1
+python-xlib==0.33
 pyusb==1.3.1
-rapidfuzz==3.14.0
-Requests==2.32.5
-Xlib==0.21
+PyYAML==6.0.3
+qrcode==8.2
+requests==2.32.5
+setuptools==80.9.0
+six==1.17.0
+urllib3==2.5.0
+viivakoodi==0.8.0
