--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ charset-normalizer==3.4.4
 click==8.3.0
 docutils==0.22.3
 escpos==2.0.0
+flask==3.1.2
+flask_cors==6.0.1
 filetype==1.2.0
 future==1.0.0
 idna==3.11
